--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,8 +1,23 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button>
+        <ion-icon name="menu" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    
     <ion-title>
-      Tab 1
+      Libros
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon name="search-outline" slot="icon-only"></ion-icon>
+      </ion-button>
+      <ion-button class="cart" [routerLink]="['/tabs/tab3']">
+        <ion-icon name="logo-buffer" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-badge color="light" slot="end">0</ion-badge>
   </ion-toolbar>
 </ion-header>
 
